--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ deluxe = { version = "0.5.0" }
 futures = { version = "0.3.31" }
 http = { version = "1.3.1" }
 include_directory = { version = "0.1.1" }
+instant-acme = { version = "0.7.2" }
 jsonwebtoken = { version = "9.3.1" }
 libc = { version = "0.2.172" }
 mime = { version = "0.3.17" }
