--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -26,6 +26,7 @@ clap = { workspace = true, optional = true }
 base64 = { workspace = true, optional = true }
 dashmap = { workspace = true, optional = true }
 futures = { workspace = true }
+instant-acme = { workspace = true, optional = true }
 jsonwebtoken = { workspace = true, optional = true }
 nameth = { workspace = true }
 nix = { workspace = true, optional = true, features = ["signal"] }
@@ -98,6 +99,7 @@ server = [
     "dep:base64",
     "dep:clap",
     "dep:dashmap",
+    "dep:instant-acme",
     "dep:jsonwebtoken",
     "dep:nix",
     "dep:openssl",
