--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
 futures = { version = "0.3.31" }
 http = { version = "1.3.1" }
+humantime = { version = "2.2.0" }
 include_directory = { version = "0.1.1" }
 jsonwebtoken = { version = "9.3.1" }
 libc = { version = "0.2.172" }
